    * Sarissa now explicitly sets IE's default behavior regarding validateOnParse and  
      ProhibitDTD to false, thanks to matek994 (SF.net username) and 2907778 (SF.net userid) 
    * Sarissa.xmlize now does not try to xmlize functions and can thus handle more
      complex structures without infinite recursion errors thanks to iklotzko (SF.net user)
      
0.9.9.4
    * Added first attempt on a MediaWiki API
    * Fixed callback execution in updateContentFromForm and updateContentFromUri
      thanks to javinto (SF user) 
    * Fixed selectNodes bug thanks to Doug Clayton

0.9.9.3
    * XMLHttpRequest is now always defined for IE, even version 7 to avoid version 
      problems between ActiveX controls (IE7 hardcodes XMLHttpRequest to MSXML 3.0).
      Many thanks to reporter Scott Chinn. Special thanks to dougdomeny and 
      Ron MacCracken (rmaccracken) for working on solutions.
    * Fixed the "send results" form unit tests page to work with IE 

0.9.9.2
    * Fixed a variable scope in Sarissa.updateContentFromURI thanks to Lawrence Michel
    * Fixed JSLint and JSDoc reports in build (errr, "somebody" forgot to re-enable them after 
      commenting them out to get a faster build while doing 0.9.9.1 ;-)
    * Applied the new dev.abiss.gr skin properly in the generated docos
    * Made some minor code changed to pass more JSLint errors/warnings

0.9.9.1
    * Removed "!==" and "===" operators.
    * Fixed bug with Sarissa.updateContentFromNode(), thanks to Javinto 
      (SF user) andHartmut Wynen for finding the bug and solution respectively. 
    * Refactored the callback stuff in Sarissa.updateContentFromXXX methods. They work alot
      better and with appropriate signatures now. Sarissa.updateContentFromNode now uses no 
      callbacks since it's not an async method.
    * Added table utilities, just sorting for table data for now. Maybe you'll find it usefull.

0.9.9
    * Fixed errors in Sarissa.updateContentFromForm (that's what you get for 